switch to radix ui

--- a/app/modules/ui/tailwind.css
+++ b/app/modules/ui/tailwind.css
@@ -12,6 +12,18 @@
   }
 }
 
+@layer components {
+  .panel {
+    @apply bg-black/75 backdrop-blur-md border border-white/10 rounded-md shadow-md shadow-black/25;
+  }
+  .panel-border-left {
+    @apply rounded-none border-0 border-r;
+  }
+  .panel-border-right {
+    @apply rounded-none border-0 border-r;
+  }
+}
+
 .mosaic-window-toolbar {
   background: theme("colors.slate.700") !important;
   box-shadow: none !important;
