apply thin scrollbar globally

--- a/app/modules/ui/tailwind.css
+++ b/app/modules/ui/tailwind.css
@@ -10,6 +10,20 @@
   :focus-visible {
     @apply ring-2 ring-foreground-8/75;
   }
+
+  ::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 9999px;
+  }
+  ::-webkit-scrollbar-track-piece:start,
+  ::-webkit-scrollbar-track-piece:end,
+  ::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
 }
 
 @layer components {
