simpler scene view without tag stuff

--- a/app/modules/ui/tailwind.css
+++ b/app/modules/ui/tailwind.css
@@ -8,7 +8,7 @@
   }
 
   :focus-visible {
-    @apply ring-2 ring-foreground-8/75;
+    @apply ring-2 ring-foreground-8/75 ring-inset;
   }
 
   ::-webkit-scrollbar {
