--- a/app/modules/ui/tailwind.css
+++ b/app/modules/ui/tailwind.css
@@ -12,12 +12,13 @@
   }
 
   ::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
+    width: 8px;
+    height: 8px;
   }
   ::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.25);
-    border-radius: 9999px;
+    background-color: rgba(255 255 255 / 0.2);
+  }
+  ::-webkit-scrollbar-thumb:active {
   }
   ::-webkit-scrollbar-track-piece:start,
   ::-webkit-scrollbar-track-piece:end,
