--- a/app/modules/ui/tailwind.css
+++ b/app/modules/ui/tailwind.css
@@ -2,55 +2,56 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  * {
-    @apply outline-none;
-  }
-
-  :focus-visible {
-    @apply ring-2 ring-inset ring-foreground-8/75;
-  }
-
-  ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  ::-webkit-scrollbar-thumb {
-    background-color: rgba(255 255 255 / 0.2);
-  }
-  ::-webkit-scrollbar-thumb:active {
-  }
-  ::-webkit-scrollbar-track-piece:start,
-  ::-webkit-scrollbar-track-piece:end,
-  ::-webkit-scrollbar-corner {
-    background-color: transparent;
-  }
+* {
+  @apply outline-none;
 }
 
-@layer components {
-  .panel {
-    @apply rounded-md border border-white/10 bg-black;
-  }
-  .panel-border-none {
-    @apply rounded-none border-0;
-  }
-  .panel-border-left {
-    @apply rounded-none border-0 border-l;
-  }
-  .panel-border-right {
-    @apply rounded-none border-0 border-r;
-  }
-
-  [data-fancy-mode] .panel {
-    @apply border-white/10 bg-black/75 shadow-md shadow-black/25 backdrop-blur-md;
-  }
+:focus-visible {
+  @apply ring-2 ring-inset ring-foreground-8/75;
 }
 
-@layer utilities {
-  .animate-radix[data-state="open"] {
-    @apply animate-in;
-  }
-  .animate-radix[data-state="closed"] {
-    @apply animate-out;
-  }
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255 255 255 / 0.2);
+}
+::-webkit-scrollbar-thumb:active {
+}
+::-webkit-scrollbar-track-piece:start,
+::-webkit-scrollbar-track-piece:end,
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
+.panel {
+  @apply rounded-md border border-gray-800 bg-black;
+}
+.panel-border-none {
+  @apply rounded-none border-0;
+}
+.panel-border-left {
+  @apply rounded-none border-0 border-l;
+}
+.panel-border-right {
+  @apply rounded-none border-0 border-r;
+}
+[data-fancy-mode] .panel {
+  @apply border-white/10 bg-black/75 shadow-md shadow-black/25 backdrop-blur-md;
+}
+
+.panel-interactive:hover,
+.panel-interactive.active {
+  @apply border-neutral-4 text-foreground-7;
+}
+[data-fancy-mode] .panel-interactive {
+  @apply select-none transition-colors;
+}
+
+.animate-radix[data-state="open"] {
+  @apply animate-in;
+}
+.animate-radix[data-state="closed"] {
+  @apply animate-out;
 }
