--- a/app/root.css
+++ b/app/root.css
@@ -22,3 +22,15 @@
     transform: scale(1);
   }
 }
+
+::-webkit-scrollbar {
+  @apply w-1.5;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-white/25;
+}
+
+::-webkit-scrollbar-corner {
+  @apply bg-transparent;
+}
