--- a/app/root.css
+++ b/app/root.css
@@ -1,5 +1,5 @@
 @unocss;
-/* 
+
 :root {
   @apply font-sans;
 }
@@ -22,4 +22,4 @@
 
 ::-webkit-scrollbar-corner {
   @apply bg-transparent;
-} */
+}
